--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@element-plus/icons-vue": "2.3.1",
+		"@kjgl77/datav-vue3": "^1.7.3",
 		"@wangeditor/editor": "5.1.23",
 		"@wangeditor/editor-for-vue": "5.1.12",
 		"autoprefixer": "10.4.18",
